<resources>
    <string name="app_name">My 1st Application</string>
    <string name="first_name_text">Enter your first name</string>
    <string name="surname_text">Enter your surname</string>
    <string name="button_send">Send</string>
    <string name="first_name">First name:</string>
    <string name="surname">Surname:</string>
    <string name="welcome_text">Welcome %s</string>
    <string name="date_birth">Date of Birth</string>
    <string name="weight">Weight (Kg)</string>
    <string name="button_info">Check Info</string>
    <string name="height">Height (m)</string>
    <string name="date_birth_text">2022-01-12</string>
    <string name="weight_text">71.5</string>
    <string name="height_text">1.67</string>
    <string name="imc_text">Your IMC é %.1f</string>
    <string name="age_text">Your age is %d</string>
    <string name="title_activity_display_info">DisplayInfoActivity</string>

</resources>